<resources>
    <string name="app_name">Forecast</string>
    <string name="search">Search</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="minTemp">Min:</string>
    <string name="maxTemp">Max:</string>
    <string name="title_activity_n_d_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="retry">Retry</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="loading">Loading</string>
    <string name="cancel">Cancel</string>
    <string name="addlCity">Add</string>
    <string name="retryCurrent">Retry</string>
    <string name="type_here">Type here…</string>
    <string name="addCity">Add</string>
    <string name="cancelCity">Cancel</string>
    <string name="addBtnCity">Add</string>
    <string name="removeCity">Remove</string>
    <string name="emptyListTextView">Add some city</string>
</resources>
